feat: add /persons/{id}/location and /persons/nearby endpoints
